--- a/WAKEMEUP#/Base.lproj/LaunchScreen.storyboard
+++ b/WAKEMEUP#/Base.lproj/LaunchScreen.storyboard
@@ -23,7 +23,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" name="baseBlue"/>
+                        <color key="backgroundColor" name="topBlue"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -33,8 +33,8 @@
     </scenes>
     <resources>
         <image name="pidgeon" width="206" height="158"/>
-        <namedColor name="baseBlue">
-            <color red="0.46274509803921571" green="0.5725490196078431" blue="0.56470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="topBlue">
+            <color red="0.52156862745098043" green="0.66666666666666663" blue="0.6588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
