--- a/WAKEMEUP#/Base.lproj/Main.storyboard
+++ b/WAKEMEUP#/Base.lproj/Main.storyboard
@@ -501,6 +501,7 @@
                     <navigationItem key="navigationItem" id="Vbv-X0-i7d"/>
                     <connections>
                         <outlet property="distanceLabel" destination="Mec-op-Qdn" id="Cqf-ER-GQB"/>
+                        <outlet property="kmTextfield" destination="l59-rv-0kH" id="0Vx-2k-gYa"/>
                         <outlet property="percentLabel" destination="YvX-bA-3Wz" id="N0o-lG-4w9"/>
                         <outlet property="searchTableview" destination="CL0-vk-hJO" id="EJN-wv-03g"/>
                         <outlet property="slider" destination="b2n-OF-kNt" id="rge-0d-Jkj"/>
@@ -660,7 +661,7 @@ How to use:
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="wake up?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J9X-zM-M8P">
-                                <rect key="frame" x="175" y="121" width="165" height="40"/>
+                                <rect key="frame" x="175" y="138" width="165" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Z3i-ES-hUB"/>
                                 </constraints>
@@ -669,7 +670,7 @@ How to use:
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LrU-sy-TvQ">
-                                <rect key="frame" x="30" y="45" width="97" height="35.5"/>
+                                <rect key="frame" x="30" y="62" width="97" height="35.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="97" id="NfT-uY-OMA"/>
                                     <constraint firstAttribute="height" constant="35.5" id="qk7-aU-8P0"/>
@@ -679,7 +680,7 @@ How to use:
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="do you want to" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xlI-Sa-9um">
-                                <rect key="frame" x="70" y="85.5" width="171.5" height="35.5"/>
+                                <rect key="frame" x="70" y="102.5" width="171.5" height="35.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35.5" id="ahy-yK-fqv"/>
                                 </constraints>
@@ -688,7 +689,7 @@ How to use:
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nxp-f7-da7" userLabel="buttonView">
-                                <rect key="frame" x="52" y="181" width="310" height="463"/>
+                                <rect key="frame" x="52" y="198" width="310" height="446"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lDc-gY-IZY">
                                         <rect key="frame" x="230" y="20" width="50" height="50"/>
@@ -1033,7 +1034,6 @@ How to use:
                         <constraints>
                             <constraint firstItem="J9X-zM-M8P" firstAttribute="top" secondItem="xlI-Sa-9um" secondAttribute="bottom" id="1ji-HW-dbu"/>
                             <constraint firstItem="xlI-Sa-9um" firstAttribute="leading" secondItem="Gje-Sn-Ipb" secondAttribute="leading" constant="70" id="4jq-4h-2ze"/>
-                            <constraint firstItem="LrU-sy-TvQ" firstAttribute="top" secondItem="R6V-9C-UN7" secondAttribute="top" constant="25" id="9za-S9-ZSy"/>
                             <constraint firstAttribute="trailing" secondItem="goL-5d-1Cv" secondAttribute="trailing" id="DhV-QO-fru"/>
                             <constraint firstItem="Nxp-f7-da7" firstAttribute="top" secondItem="J9X-zM-M8P" secondAttribute="bottom" constant="20" id="Dlu-8m-cuL"/>
                             <constraint firstItem="LSb-Xv-YgG" firstAttribute="centerX" secondItem="W2Z-fI-UhC" secondAttribute="centerX" id="GLc-hd-0fI"/>
